Simplifica as condições do paciente em CondicaoAtual e HistoricoClinico