@@ -66,7 +66,7 @@ public class MaxHeap {
             return null;
         }
         int ultimo = lista.size() - 1;
-        Paciente removido = lista.get(0);
+        Paciente removido = lista.getFirst();
         swap(0, ultimo, lista);
         lista.remove(ultimo);
         shiftDown(0, lista);
